Added an endpoint to get all subscriptions
